tests/errors/duplicate-module.au
import "" as a;
import "" as a;